# 3_course

./: .gitattributes  .gitignore  .gitmodules  h  Документ Microsoft Word.docx  бжч.docx
1term/: .gitignore  лекции бжч.docx
1term/SP/Lab_08/src/Lab-08b/: CMakeLists.txt
1term/SP/Lab_08/src/Lab-08b/src/: Lab-08b.c
1term/SP/Lab_08/src/mappingsd/: CMakeLists.txt
1term/SP/Lab_08/src/mappingsd-2/: CMakeLists.txt
1term/SP/Lab_08/src/mappingsd-2/src/: mappings.c  mappings.def
1term/SP/Lab_08/src/mappingsd/src/: mappings.c  mappings.def
1term/БД/: CDB_LAB3.sql  URSA_CONN_PDB.sql  lab4.sql  lab5.docx  lab6.docx  lab7.docx  Ответы 6.txt
2term/Доки к курсовому/: Use case.drawio  Диаграмма без названия.drawio  Диаграмма развёртывания.drawio  Лист задания Розель.doc  Пояснительная_Розель.docx  Схема БД.drawio  Схемы.docx  Титульник_Розель.docx
2term/ИБ/: lab6.docx
2term/ММО/: index.py  task2.py
OC/lab1/: Z03-1.bat  Z03-2.bat
OC/lab4/: ~$lab4.docx
Курсач БД/: create_tables.sql  create_tables1.sql  diag.vdiagram  Пояснительная_записка_Розель.docx
ПСКП/lab2/: package-lock.json  package.json
ПСКП/lab3/: 03-01.js  03-02.js  03-05.js  index.html
ПСКП/lab4/: index.html  package-lock.json
ПСКП/lab5/: index.js  statistics.js
ПСКП/lab6/: lab06-02.js  lab06-04.js  m0603.js  package-lock.json  sendmail.html
ПСП/lab1/: NETWORK ID and HOST ID.txt  lab1.docx
СП/: ДЛЯ ДАУНОВ.txt
СП/lab1/: CMakeLists.txt  lab1.c
СП/lab2Cmake/: CMakeLists.txt  lab-02a.c  lab-02b.c  lab-02c.c
ТПО/: Functional Specification Rimi Pluss_Станислав_Розель.doc  ~$lab4.xlsx
ТПО/lab2/: Testing check-list for Lab-2.xlsx
ТПО/lab4/: lab4.xlsx
ТПО/lab5/: TestCase.xls  lab5.docx
ТПО/lab6/: Bugs_template.xlsx
ТПО/lab7/: package.json
ТПО/lab8/: index.js
ТПвИ/: lab2.rar  lab4.rar
ТПвИ/lab1/: index.html  lab1.docx
(+1680 files in other folders)
